<resources>
    <string name="app_name">dosenklp1</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="nip">198201182008121002</string>
    <string name="lecturer_name">Husnil Kamil</string>
    <string name="student_name">Annisa Ulfa</string>
    <string name="home">Beranda</string>
    <string name="calender">Jadwal</string>
    <string name="notification">Bimbingan</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nim">2011522015</string>
    <string name="judulSkripsi">Pembangunan Sistem Informasi Monitoring Harga Barang Kebutuhan Pokok Berbasis Barang Web</string>
    <string name="accept">Terima</string>
    <string name="except">Tolak</string>
    <string name="sidang">Sidang</string>
    <string name="seminar">Seminar</string>
    <string name="logbook">Logbook</string>
    <string name="jadwal">Senin / 17-09-2022</string>
    <string name="jurusan">Sistem Informasi</string>
    <string name="tanggal_mulai_ta">Tanggal Mulai TA:</string>
    <string name="nama">Nama:</string>
    <string name="dosen_pembimbing">Dosen Pembimbing:</string>
    <string name="annisa_ulfa">Annisa Ulfa</string>
    <string name="_2011522015">2011522015</string>
    <string name="_10_agustus_2020">10 Agustus 2020</string>
    <string name="husnil_kamil_mt">Husnil Kamil, MT</string>
    <string name="nimmhs">NIM:</string>
    <string name="jadwal_seminar_dan_sidang">Jadwal Seminar dan Sidang</string>
    <string name="nama_mahasiswa">Nama Mahasiswa</string>
    <string name="nim">NIM</string>
    <string name="seminar">Seminar</string>
    <string name="hari_tanggal">Hari / Tanggal</string>
    <string name="tempat">Tempat</string>
    <string name="waktu">Waktu</string>
    <string name="sidang">Sidang</string>
    <string name="senin_17_12_2022">Senin / 17-12-2022</string>
    <string name="ruang_seminar_jsi">Ruang Seminar JSI</string>
    <string name="_10_00_wib">10.00 WIB</string>
    <string name="kamis_20_12_2022">Kamis / 20-12-2022</string>
    <string name="ranti_agustin">Ranti Agustin</string>
    <string name="_1911522028">1911522028</string>
    <string name="home">Home</string>
    <string name="jadwal">Jadwal</string>
    <string name="bimbingan">Bimbingan</string>
    <string name="beranda">Beranda</string>
    <string name="profil_saya">Profil Saya</string>
    <string name="todo">TODO</string>
    <string name="husnil_kamil">Husnil Kamil</string>
    <string name="nip">NIP</string>
    <string name="_198201182008121002">198201182008121002</string>
    <string name="nama">Nama</string>
    <string name="ubah_profil">Ubah Profil</string>
    <string name="username">Username</string>
    <string name="_628xxxxxxxxxx">+628XXXXXXXXXX</string>
    <string name="no_hp">No. HP</string>
    <string name="account_information">ACCOUNT INFORMATION</string>
    <string name="email">Email</string>
    <string name="husnilkamil_gmail_com">husnilkamil@gmail.com</string>
    <string name="password">Password</string>
    <string name="pswd">*******</string>
    <string name="ubah_password">Ubah Password</string>
    <string name="password_lama">Password Lama</string>
    <string name="password_baru">Password Baru</string>
    <string name="konfirmasi_password_baru">Konfirmasi Password Baru</string>
    <string name="simpan">Simpan</string>
    <string name="batalkan">Batalkan</string>
    <string name="tambah_foto">Tambah Foto</string>
</resources>