<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".userProfileActivity">


    <ImageView
        android:id="@+id/imageViewNavigateBefore"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textViewUserProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/profil_saya"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageViewProfilPict"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/profileIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewUserProfile"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/buttonEditProfil"
        android:layout_width="136dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#17911C"
        android:inputType="textCapWords"
        android:text="@string/ubah_profil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circleImageViewProfilPict"
        tools:ignore="TextViewEdits,TextContrastCheck" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewNama"
        android:layout_width="409dp"
        android:layout_height="0.5dp"
        android:layout_marginTop="32dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonEditProfil" />

    <TextView
        android:id="@+id/textViewUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="24dp"
        android:text="@string/username"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewNama" />

    <TextView
        android:id="@+id/textViewUsername2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="18dp"
        android:text="@string/husnil_kamil"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewNama" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewUsername3"
        android:layout_width="409dp"
        android:layout_height="0.5dp"
        android:layout_marginTop="63dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toTopOf="@+id/cardViewNama"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp" />

    <TextView
        android:id="@+id/textViewNama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/nama"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/textViewUsername"
        app:layout_constraintTop_toBottomOf="@+id/cardViewUsername3" />

    <TextView
        android:id="@+id/textViewNama2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/husnil_kamil"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/textViewUsername2"
        app:layout_constraintTop_toBottomOf="@+id/cardViewUsername3" />

    <TextView
        android:id="@+id/textViewNIP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/nip"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/textViewNama"
        app:layout_constraintTop_toBottomOf="@+id/textViewNama" />

    <TextView
        android:id="@+id/textViewNIP2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/_198201182008121002"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/textViewNama2"
        app:layout_constraintTop_toBottomOf="@+id/textViewNama2" />

    <TextView
        android:id="@+id/textViewNoHP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/no_hp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/textViewNIP"
        app:layout_constraintTop_toBottomOf="@+id/textViewNIP" />

    <TextView
        android:id="@+id/textViewNomorHP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/_628xxxxxxxxxx"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/textViewNIP2"
        app:layout_constraintTop_toBottomOf="@+id/textViewNIP2" />

    <TableRow
        android:id="@+id/tableRowInformation"
        android:layout_width="410dp"
        android:layout_height="52dp"
        android:layout_marginTop="166dp"
        android:background="#16252323"
        app:layout_constraintEnd_toEndOf="@+id/cardViewUsername3"
        app:layout_constraintTop_toBottomOf="@+id/cardViewUsername3" />

    <TextView
        android:id="@+id/textViewInformation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/account_information"
        android:textColor="#616161"
        app:layout_constraintStart_toStartOf="@+id/textViewNoHP"
        app:layout_constraintTop_toTopOf="@+id/tableRowInformation" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/email"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/textViewInformation"
        app:layout_constraintTop_toBottomOf="@+id/tableRowInformation" />

    <TextView
        android:id="@+id/textViewEmail2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/husnilkamil_gmail_com"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/textViewNomorHP"
        app:layout_constraintTop_toBottomOf="@+id/tableRowInformation" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewEmail"
        android:layout_width="409dp"
        android:layout_height="0.5dp"
        android:layout_marginTop="70dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRowInformation" />

    <TextView
        android:id="@+id/textViewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/password"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/textViewEmail"
        app:layout_constraintTop_toBottomOf="@+id/cardViewEmail" />

    <TextView
        android:id="@+id/textViewPassword2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/pswd"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/textViewEmail2"
        app:layout_constraintTop_toBottomOf="@+id/cardViewEmail" />

    <Button
        android:id="@+id/buttonEditPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:backgroundTint="#17911C"
        android:inputType="textCapWords"
        android:text="@string/ubah_password"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewEmail"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextViewEdits,TextContrastCheck" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewBtn"
        android:layout_width="409dp"
        android:layout_height="0.5dp"
        android:layout_marginTop="144dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewEmail"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>