<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/light_rounded">

    <androidx.cardview.widget.CardView
        android:id="@+id/list_permintaan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"

        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_launcher_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/nama" />

            <TextView
                android:id="@+id/nama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/interbold"
                android:text="@string/student_name"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/nim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/interbold"
                android:text="@string/nim"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="@+id/nama"
                app:layout_constraintTop_toBottomOf="@+id/nama"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/judulSkripsi"
                android:layout_width="241dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/interregular"
                android:text="@string/judulSkripsi"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/nama"
                app:layout_constraintTop_toBottomOf="@+id/nim"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/buttonPositive"
                android:layout_width="90dp"
                android:layout_height="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_positive_disabled"
                android:text="@string/accept"
                android:textColor="@color/brightGreen"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/nama"
                app:layout_constraintTop_toBottomOf="@+id/judulSkripsi"
                tools:ignore="MissingConstraints,TouchTargetSizeCheck" />

            <Button
                android:id="@+id/buttonNegative"
                android:layout_width="90dp"
                android:layout_height="25dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/button_negative_disabled"
                android:text="@string/except"
                android:textColor="@color/red"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/buttonPositive"
                app:layout_constraintStart_toEndOf="@+id/buttonPositive"
                tools:ignore="MissingConstraints,TouchTargetSizeCheck" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>